--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Naluhodo">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="description" content="Font-end Learning">
+    <meta http-equiv="refresh" content="30"><!--每30秒刷新一次页面-->
     <title>这是我的第一个页面</title>
-    <style>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <style type="text/css">
         img{width:100px;}
+        h3{color:red;}
+        body{background-color: yellowgreen}
     </style>
 </head>
 <body>
     <h1>超链接</h1>
     <p>当前页打开超链接：<a href="http://study.163.com">网易云课堂</a></p>
     <p>空白页打开超链接：<a href="http://study.163.com" target="_blank">网易云课堂</a></p>
+    <a href="#tips">访问有用的提示部分</a>
     <hr>
 
     <h2>星巴克</h2>
@@ -64,6 +72,7 @@
     <h6>这是6号标题</h6>
         <font size="1">这是1号字体文本</font>
     <hr>
+
     <h3>字体与换行</h3>
     <p>
         <strong>加粗文本</strong>
@@ -76,6 +85,9 @@
         <br><br>
         <del>宁死不屈</del>&nbsp;<ins>真香</ins>
     </p>
+    <hr>
+
+    <h3><a id="tips">有用的提示部分</a></h3>
 
 </body>
 </html>
