@learn add icon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }, 100);
     </script>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="icon" href="img/chrome.jpg" sizes="16×16" type="image/jpg">
     <style type="text/css">
         img{width:100px;}
         h3{color:red;}
