--- a/index1.html
+++ b/index1.html
@@ -27,5 +27,11 @@
 </head>
 <body>
     <p>动态标题效果</p>
+    <hr>
+    <div>
+        <a href="mailto:zjured@163.com">联系我们</a>
+        <a href="img/chrome.jpg" download="chrome.jpg">下载图片</a>
+        <a href="img/chrome.jpg">查看图片</a>
+    </div>
 </body>
 </html>
