@learn dl & dt & dd

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a href="#tips">访问有用的提示部分</a>
     <hr>
 
-    <h2>星巴克</h2>
+    <h2>无序列表</h2>
     <ul>
         <li>咖啡</li>
         <li>奶茶</li>
@@ -49,6 +49,23 @@
         </li>    
     </ul>
     <hr>
+
+    <h2>有序列表</h2>
+    <ol type="a">
+        <li>咖啡</li>
+        <li>奶茶</li>
+        <li>牛奶</li>
+        <li>茶</li>
+    </ol>
+    <hr>
+
+    <h2>自定义列表</h2>
+    <dl>
+        <dt>问题1</dt>
+        <dd>回答1</dd>
+        <dt>问题2</dt>
+        <dd>回答2</dd>
+    </dl>
 
     <h3>浏览器</h3>
     <img src="img/chrome.jpg" alt="chrome"/>
