--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-:<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -60,5 +60,10 @@
         <a href="img/chrome.jpg" download="chrome.jpg">下载图片</a>
         <a href="img/chrome.jpg">查看图片</a>
     </div>
+    <form method="POST">
+        <p>First name: <input type="text" name="fname" /></p>
+        <p>Last name: <input type="text" name="lname" /></p>
+        <input type="submit" value="Submit" />
+      </form>
 </body>
 </html>
