--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Naluhodo">
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="Font-end Learning">
-    <meta http-equiv="refresh" content="30"><!--每30秒刷新一次页面-->
+    <!--meta http-equiv="refresh" content="30"--><!--每30秒刷新一次页面-->
     <title>这是我的第一个页面</title>
     <script>
         var percent = 0;
@@ -121,5 +121,15 @@
 
     <h3><a id="tips">有用的提示部分</a></h3>
 
+    <hr>
+    <h3>计时器</h3>
+    <div id="timer">aaa</div>
+<script>
+    var timer1 = setInterval(() => {
+        document.getElementById("timer").innerHTML = new Date();
+    }, 100);
+    console.log(timer1);
+
+</script>
 </body>
 </html>
