--- a/webpack-learning/public/index.html
+++ b/webpack-learning/public/index.html
@@ -7,10 +7,11 @@
 	<meta name="keywords" content="HTML, CSS">
 	<meta name="description" content="Font-end Learning">
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+	<title>环形进度条</title>
 </head>
 
 <body>
 	<div id="root"></div>
 </body>
-
+<script src="../build/bundle.js"></script>
 </html>
