--- a/basic-learning/index.html
+++ b/basic-learning/index.html
@@ -128,9 +128,14 @@
     <h3>鼠标移至一个div显示另一个div</h3>
     <div class="div1"></div>
     <div class="div2"></div>
+    <hr>
 
     <h3>解析一个get请求的url -- localhost:8080?a=1&c=2&b=3</h3>
     <div id="getUrl"></div>
+    <hr>
+    
+    <h3>一个圆环</h3>
+    <div class="redCircle"></div>
 
 
 <script>
